
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u_short ;
struct in_addr {int dummy; } ;
struct hostent {scalar_t__* h_addr_list; } ;


 scalar_t__ TRY_AGAIN ;
 int add_target_ip (char*,struct in_addr*,scalar_t__) ;
 int crash (char*,char*,int ) ;
 scalar_t__ errno ;
 struct hostent* gethostbyname (char*) ;
 scalar_t__ h_errno ;
 int hstrerror (scalar_t__) ;
 scalar_t__ inet_aton (char*,struct in_addr*) ;
 char* strchr (char*,char) ;
 scalar_t__ strtoul (char*,int *,int ) ;
 int u_sleep (int) ;

int add_target(char *arg)
{
 int i;
 struct hostent *he;
 struct in_addr *in, ip;
 char *port_str;
 u_short port = 0;

 if(!arg) return -1;

 if((port_str = strchr(arg, ':'))) {
  *port_str = '\0';
  port_str++;
  if(*port_str) port = (u_short)strtoul(port_str, ((void*)0), 0);
 }


 if(inet_aton(arg, &ip)) return add_target_ip(arg, &ip, port);


 errno = 0;
 he = gethostbyname(arg);
 if(!he && h_errno == TRY_AGAIN) {
  u_sleep(500000);
  he = gethostbyname(arg);
 }

 if(!he) crash("Failed to resolve %s: %s", arg, hstrerror(h_errno));


 for(i = 0; he->h_addr_list[i]; i++) {
  in = (struct in_addr *)he->h_addr_list[i];
  add_target_ip(arg, in, port);
 }

 return 0;
}
